Name:     fast-aleck
Version:  0.0.0.1
Synopsis: Bindings to fast-aleck, a smart typography enhancer

Description:
  Haskell bindings to the fast-aleck library:

  .

  <https://github.com/ddfreyne/fast-aleck>

Homepage:      http://github.com/jaspervdj/fast-aleck-hs
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Text
Build-type:    Simple
Cabal-version: >= 1.8

Library
  Ghc-options:    -Wall
  Hs-source-dirs: src
  Include-dirs:   fast-aleck/include

  C-sources:
    cbits/fast-aleck-wrapper.c
    fast-aleck/src/fast-aleck/fast-aleck.c

  Exposed-modules:
    Text.FastAleck
    Text.FastAleck.ByteString
    Text.FastAleck.ByteString.Lazy
    Text.FastAleck.String
    Text.FastAleck.Text
    Text.FastAleck.Text.Lazy

  Other-modules:
    Text.FastAleck.Internal

  Build-depends:
    base       >= 4    && < 5,
    bytestring >= 0.9  && < 0.10,
    text       >= 0.11 && < 0.12

Test-suite fast-aleck-tests
  Ghc-options:    -Wall
  Hs-source-dirs: tests
  Main-is:        TestSuite.hs
  Type:           exitcode-stdio-1.0

  Build-depends:
    fast-aleck,
    HUnit                      >= 1.2 && < 1.3,
    test-framework             >= 0.4 && < 0.7,
    test-framework-hunit       >= 0.2 && < 0.3,
    -- Copied from regular dependencies:
    base       >= 4    && < 5,
    bytestring >= 0.9  && < 0.10,
    text       >= 0.11 && < 0.12

Source-repository head
  Type:     git
  Location: https://github.com/jaspervdj/fast-aleck-hs
